--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "tsc":"tsc",
+    "start": "node build/index.js",
+    "tsc": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^5.0.3"
+    "@types/express": "^4.17.17",
+    "typescript": "5.0.3"
+  },
+  "dependencies": {
+    "express": "4.18.2"
   }
 }
